Add documentation of PessoaController
